# DWIN-SmartWard-RemoteCare

./: .gitignore  LICENSE  README.md
Primary/: DGUS.dxpro
Primary/DWIN_SET/: 32_PageFile.icl  33_IconFile.icl  VP.h
Primary/Images/: RecentIcons.json
Primary/Pages/: 001.json  002.json  003.json  004.json
Secondary/: .gitignore
Secondary/C51/: temprature.uvopt  temprature.uvproj
Secondary/C51/src/: ds18b20.c  ds18b20.h  dwin.c  dwin.h  main.c  public.c  public.h  smg.c  smg.h  uart.c  uart.h
Secondary/ESP32/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
Secondary/ESP32/components/: max98357
Secondary/ESP32/main/: CMakeLists.txt  Kconfig.projbuild  audio_handler.c  audio_handler.h  esp32_main.h  idf_component.yml  mdns_service.c  mdns_service.h  station_example_main.c  tcp_server.c  tcp_server.h  uart_handler.c  uart_handler.h
Secondary/MAX98357/: CMakeLists.txt
Secondary/MAX98357/include/: max98357_i2s.h
Secondary/MAX98357/src/: max98357_i2s.c
Secondary/T5L/: AfterBuildRun.bat  NEW_C__S5_S4_S3_S2_8283_RTC.uvopt  NEW_C__S5_S4_S3_S2_8283_RTC.uvproj  New_C_8283.build_log.htm  New_C_8283.map
Secondary/T5L/Core/Inc/: C51T5L1.h  Dwin_T5L1H.h  Sys.h
Secondary/T5L/Core/Src/: Main.c  Sys.c
Secondary/T5L/Hardware/Inc/: Uart.h
Secondary/T5L/Hardware/Src/: Uart.c  i2c.c
Secondary/webui/backend/: device_discovery.go  go.mod  handlers.go  main.go  voxcpm_helper.py  voxcpm_tts.py
Secondary/webui/frontend/: app.js  index.html  styles.css
VoxCPM/: app.py  pyproject.toml
VoxCPM/src/voxcpm/: cli.py  core.py  zipenhancer.py
(+12 files in other folders)
